--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Tu imagen -->
 				<a href="#" class="image avatar"><img src="https://raw.githubusercontent.com/pipopinto/pipopinto.github.io/master/images/IMG-20180324-WA0033.jpg" alt="" /></a>
 				<!-- Tu perfil -->
-				<h1><strong>Escribe tu nombre</strong>, tu perfil.<br />
+				<h1><strong>Pipo Pinto</strong>, Project Managment.<br />
 			</header>
 
 		<!-- Contenido principal -->
@@ -23,12 +23,12 @@
 					<section id="one">
 						<header class="major">
 							<!-- Tu perfil - Título -->
-							<h2>Tu perfil - Título.</h2>
+							<h2>Pipo Pinto- Project Managment</h2>
 						</header>
 						<!-- Tu perfil - Descripción -->
-						<p>A lo largo de mi carrera profesional, siempre me he destacado por crear, compartir y ejecutar campañas de marketing online, principalmente en diferentes corporativos.</p>
+						<p>Ingeniero mecánico de proyectos con amplio conocimiento en el área de aire acondicionado, ventilación mecánica y automatización.</p>
 						<ul class="actions">
-							<li><a href="https://co.linkedin.com/in/jessica-yellow-64b053123" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
+							<li><a href="https://www.linkedin.com/in/juan-felipe-pinto-gomez/" target="_blank" class="button">Saber más.</a></li>
 						</ul>
 					</section>
 
@@ -43,7 +43,7 @@
 								<!-- Tu portafolio - Su imagen -->	
 									<img src="http://miguelnieva.com/content/images/2015/09/11885383_916947578373774_670895181705337546_n.jpg"/></a>
 								<!-- Tu portafolio - Título -->	
-								<h3>Formo parte de la Comunidad Platzi.</h3>
+								<h3>Proyectos de aire acondicionado.</h3>
 								<!-- Tu portafolio - Descripción -->	
 								<p>La comunidad profesional web más reconocida del mundo.</p>
 							</article>
