--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- Barra izquierda -->
 			<header id="header">
 				<!-- Tu imagen -->
-				<a href="#" class="image avatar"><img src="https://raw.githubusercontent.com/pipopinto/pipopinto.github.io/master/images/IMG-20180324-WA0033.jpg" alt="" /></a>
+				<a href="#" class="image avatar"><img src="https://raw.githubusercontent.com/pipopinto/pipopinto.github.io/master/images/ATOM_LOGO_fondonegro2.png" alt="" /></a>
 				<!-- Tu perfil -->
 				<h1><strong>Pipo Pinto</strong>, Project Managment.<br />
 			</header>
@@ -41,7 +41,7 @@
 								<!-- Tu portafolio - ¿Hacia dónde los vas a mandar? -->	
 								<a href="http://platzi.com" target="_blank" class="image fit thumb">
 								<!-- Tu portafolio - Su imagen -->	
-									<img src="http://miguelnieva.com/content/images/2015/09/11885383_916947578373774_670895181705337546_n.jpg"/></a>
+									<img src="https://raw.githubusercontent.com/pipopinto/pipopinto.github.io/master/images/ATOM_LOGO_fondonegro2.png"/></a>
 								<!-- Tu portafolio - Título -->	
 								<h3>Proyectos de aire acondicionado.</h3>
 								<!-- Tu portafolio - Descripción -->	
