--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 							</article>
 							
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="https://medium.com/@jessicayellow/how-do-i-deliver-a-new-content-marketing-strategy-f3a82be2c312#.9ut6yqpy3" target="_blank" class="image fit thumb"><img src="https://cdn-images-1.medium.com/max/600/1*VaPJeQUEjZEBfq-q_Eif3A.jpeg" alt="" /></a>
-								<h3>Escribo en Medium.</h3>
+								<a href="https://medium.com/@jessicayellow/how-do-i-deliver-a-new-content-marketing-strategy-f3a82be2c312#.9ut6yqpy3" target="_blank" class="image fit thumb"><img src="https://raw.githubusercontent.com/pipopinto/pipopinto.github.io/master/images/IMG_20180313_210151.jpg" alt="" /></a>
+								<h3>Proyectos de automatización.</h3>
 								<p>Escribo tácticas sobre cómo mejorar el marketing de tu empresa.</p>
 							</article>
 						</div>
